...
            <objects>
                <navigationController title="All Products" id="CIs-lO-HOi" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Home" image="icons8-home-page-30" id="YdP-NX-ZQO"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="9OV-Nf-1Ao">
                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
...
            <objects>
                <navigationController title="Expiring Soon" id="Jrr-SC-yWJ" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Expiring!" image="icons8-clock-30" id="zLu-kY-INc"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="reT-3l-gXj">
                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
...
                                                <rect key="contentStretch" x="0.0" y="0.0" width="0.5" height="1"/>
                                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="10"/>
                                                <state key="normal" title="Today">
                                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
...
                                                <rect key="contentStretch" x="0.0" y="0.0" width="0.5" height="1"/>
                                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="10"/>
                                                <state key="normal" title="Tomorrow">
                                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
...
                                                <rect key="contentStretch" x="0.0" y="0.0" width="0.5" height="1"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                                <state key="normal" title="2 Days Later">
                                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    <color key="titleShadowColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                                <rect key="contentStretch" x="0.0" y="0.0" width="0.5" height="1"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                                <state key="normal" title="Others">
                                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    <color key="titleShadowColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TJf-6N-b69">
                                <rect key="frame" x="10" y="451" width="300" height="25"/>
                                <accessibility key="accessibilityConfiguration" identifier="addProductMsg"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="25" id="KQY-TP-LKK"/>
...
                                    <constraint firstAttribute="width" constant="90" id="vXp-ch-yKX"/>
                                </constraints>
                                <state key="normal" title="Add Product">
                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                        </variation>
                    </view>
                    <tabBarItem key="tabBarItem" title="Add" image="icons8-plus-30" id="0k0-tB-ztj"/>
                    <navigationItem key="navigationItem" id="TBR-hc-W8E"/>
                    <connections>
...
                                    <constraint firstAttribute="width" constant="100" id="vhD-hf-E2c"/>
                                </constraints>
                                <state key="normal" title="Update Entry">
                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mGP-WY-HH2">
                                <rect key="frame" x="110" y="467" width="200" height="25"/>
                                <accessibility key="accessibilityConfiguration" identifier="updateProductMsg"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="25" id="o6Y-aN-zwe"/>
...
